--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3107,13 +3107,15 @@ h3 + .nav-list, h3 + .panel-selector, .small.nav-list, .small.panel-selector {
 .answer, .question {
   margin-bottom: .5rem; }
   .answer .prefix, .answer .postfix, .answer .value, .question .prefix, .question .postfix, .question .value {
-    font-size: 0.78571em;
-    line-height: 1.90909em;
-    margin-top: 0.95455em;
-    margin-bottom: 0.47727em;
+    font-size: 1em;
+    line-height: 1.5em;
+    margin-top: 0em;
+    margin-bottom: 0em;
     font-family: 'Open Sans', "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
     font-weight: 700;
-    color: gray; }
+    padding: .5em;
+    margin-top: 0;
+    color: #666666; }
 
 .label-holder, .input-holder, .message-holder, .value-holder {
   width: 100%;
@@ -3185,15 +3187,6 @@ h3 + .nav-list, h3 + .panel-selector, .small.nav-list, .small.panel-selector {
 
 [class*="input-space"] + [class*="input-space"]:last-child, [class*="value-space"] + [class*="value-space"]:last-child {
   padding-right: 0; }
-
-.answer .value, .question .value {
-  padding: 7px;
-  vertical-align: top;
-  display: inline-block;
-  margin-top: 0;
-  color: #666666;
-  font-size: 1.28571em;
-  line-height: 1.16667em; }
 
 .message-holder small, .message-holder span {
   font-size: 0.78571em;
@@ -3479,7 +3472,7 @@ input[type="checkbox"], input[type="radio"] {
 *				</span>
 *			</label>
 *		</div>
-*		<div class="input-holder">
+*		<div class="input-holder row collapse">
 *			 <div class="input-space column small-6 large-9">
 *				<input type="text"/>
 *			</div>
